--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -63,7 +63,9 @@
 <!ENTITY Ctr_tabwidthinfo3	"Hodnoty pod 48px působí většinou chyby!">
 <!ENTITY Ctr_square_edges	"Hranaté horní rohy">
 <!ENTITY Ctr_tttitlebar		"Název panelu v &brandShortName; liště aplikace">
-<!ENTITY Ctr_ttnooverfl		"Remove overflow effect from long tab titles">
+<!ENTITY Ctr_ttoverflow		"Long tab titles">
+<!ENTITY Ctr_ttoverfl_def	"Default overflow effect">
+<!ENTITY Ctr_ttoverfl_no	"No overflow effect">
 <!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Vložit související panel za aktuální">
 <!ENTITY Ctr_emptytfavico	"Zobrazit faviconu (v případě, že ji stránka nenabízí)">
@@ -212,6 +214,7 @@
 <!ENTITY Ctr_bmbviewbmsb	"Popup: ukázat 'Zobrazit postranní panel'">
 <!ENTITY Ctr_bmbviewbmtb	"Popup: ukázat 'Zobrazit lištu'">
 <!ENTITY Ctr_bmbnounsort	"Popup: skrýt 'Netříděné záložky'">
+<!ENTITY Ctr_bmbutclpopup	"Popup: only show 'Bookmark this page' and bookmarks">
 <!ENTITY Ctr_bmbutnotext	"Skrýt návěští na liště záložek">
 <!ENTITY Ctr_skipprintpr	"Tlačítko tisku: přeskočit náhled tisku">
 <!ENTITY Ctr_tbconmenu		"Kontextové menu položek lišty: skrýt 'přesunout do nabídky', 'odebrat z lišty', 'obnovit/přidat do záložek všechny panely' a 'obnovit zavřený panel'">
@@ -415,7 +418,8 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
 <!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_newversion		"Latest CTR version">
+<!ENTITY Ctr_newversion2	"Latest CTR beta">
 
 <!ENTITY Ctr_addon-bar.accesskey		"D">
 <!ENTITY appMenuGettingStarted.label	"Začínáme">
