--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -63,7 +63,9 @@
 <!ENTITY Ctr_tabwidthinfo3	"Les valeurs au-dessous de 48px causeront des erreurs dans la plupart des cas !">
 <!ENTITY Ctr_square_edges	"Coins supérieurs carrés">
 <!ENTITY Ctr_tttitlebar		"Afficher le titre de l'onglet actuel dans la barre de titre de &brandShortName;">
-<!ENTITY Ctr_ttnooverfl		"Supprimer l'effet de débordement des titres d'onglets longs">
+<!ENTITY Ctr_ttoverflow		"Long tab titles">
+<!ENTITY Ctr_ttoverfl_def	"Default overflow effect">
+<!ENTITY Ctr_ttoverfl_no	"No overflow effect">
 <!ENTITY Ctr_tabtitle		"Tab title position">
 <!ENTITY Ctr_tabinsertion	"Insérer les onglets liés à la suite de l'onglet actuel">
 <!ENTITY Ctr_emptytfavico	"Afficher un Favicon (pour les pages qui n'en proposent pas) :">
@@ -212,6 +214,7 @@
 <!ENTITY Ctr_bmbviewbmsb	"Menu déroulant : afficher « Afficher panneau des marque-pages »">
 <!ENTITY Ctr_bmbviewbmtb	"Menu déroulant : afficher « Afficher la barre personnelle »">
 <!ENTITY Ctr_bmbnounsort	"Menu déroulant : masquer « Autres marque-pages »">
+<!ENTITY Ctr_bmbutclpopup	"Popup: only show 'Bookmark this page' and bookmarks">
 <!ENTITY Ctr_bmbutnotext	"Masquer le texte sur la barre personnelle">
 <!ENTITY Ctr_skipprintpr	"Bouton « Imprimer » : sauter l'aperçu avant impression">
 <!ENTITY Ctr_tbconmenu		"Menu contextuel de barre d'outils : masquer « Déplacer vers le menu », « Retirer de la barre d'outils », « Actualiser/Marquer tous les onglets » et « Annuler la fermeture de l'onglet »">
@@ -415,7 +418,8 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (forum anglais)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (forum allemand)">
 <!ENTITY Ctr_github_issues	"Signaler des problèmes via Github">
-<!ENTITY Ctr_newversion		"Vérifier s'il y a une nouvelle version">
+<!ENTITY Ctr_newversion		"Latest CTR version">
+<!ENTITY Ctr_newversion2	"Latest CTR beta">
 
 <!ENTITY Ctr_addon-bar.accesskey		"U">
 <!ENTITY appMenuGettingStarted.label	"Commencer">
