--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -63,7 +63,9 @@
 <!ENTITY Ctr_tabwidthinfo3	"48px未満の値は、ほとんどの場合、不具合の原因となります！">
 <!ENTITY Ctr_square_edges	"上部の角を四角くする">
 <!ENTITY Ctr_tttitlebar		"タブタイトルを &brandShortName; タイトルバーに表示する">
-<!ENTITY Ctr_ttnooverfl		"長いタブタイトルが溢れた際の表記（...）を除去">
+<!ENTITY Ctr_ttoverflow		"Long tab titles">
+<!ENTITY Ctr_ttoverfl_def	"Default overflow effect">
+<!ENTITY Ctr_ttoverfl_no	"No overflow effect">
 <!ENTITY Ctr_tabtitle		"タブタイトルの配置">
 <!ENTITY Ctr_tabinsertion	"現在のタブの後ろに関連するタブを開く">
 <!ENTITY Ctr_emptytfavico	"ファビコンの表示（サイトのファビコンが存在しないとき）">
@@ -212,6 +214,7 @@
 <!ENTITY Ctr_bmbviewbmsb	"ポップアップ: 「ブックマークサイドバーを表示」をメニューに表示">
 <!ENTITY Ctr_bmbviewbmtb	"ポップアップ: 「ブックマークツールバーを表示」をメニューに表示">
 <!ENTITY Ctr_bmbnounsort	"ポップアップ: 「未整理のブックマーク」を隠す">
+<!ENTITY Ctr_bmbutclpopup	"Popup: only show 'Bookmark this page' and bookmarks">
 <!ENTITY Ctr_bmbutnotext	"ブックマークツールバーのテキストを隠す">
 <!ENTITY Ctr_skipprintpr	"印刷ボタン: 印刷プレビューをスキップ">
 <!ENTITY Ctr_tbconmenu		"ツールバーの右クリック：メニューに移動、ツールバーから削除、すべてのタブを再読み込み、閉じたタブを元に戻すのメニューを表示しない">
@@ -415,7 +418,8 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (英語フォーラム)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (ドイツ語フォーラム)">
 <!ENTITY Ctr_github_issues	"Githubで問題を報告">
-<!ENTITY Ctr_newversion		"更新を確認">
+<!ENTITY Ctr_newversion		"Latest CTR version">
+<!ENTITY Ctr_newversion2	"Latest CTR beta">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"入門">
@@ -423,8 +427,8 @@
 <!ENTITY Ctr_menu_restart.label			"リスタート">
 <!ENTITY Ctr_restartapp					"&brandShortName; メニューとファイルメニューにリスタートを追加する">
 <!ENTITY Ctr_ctrnewinv					"現在のバージョンの &brandShortName; 用の新しいオプションに下線を引く">
-<!ENTITY Ctr_cssoverride				"Custom css code">
-<!ENTITY Ctr_cssoverride2				"Css code will not be checked for errors!">
+<!ENTITY Ctr_cssoverride				"カスタムCSSコード">
+<!ENTITY Ctr_cssoverride2				"CSSコードのエラーは検証されません！">
 
 <!ENTITY Ctr_openInCurrentTab			"入力後に現在のタブで開く">
 <!ENTITY Ctr_openInNewTab				"入力後に新しいタブで開く">
