--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -418,8 +418,8 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (Englisches Forum)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (Deutsches Forum)">
 <!ENTITY Ctr_github_issues	"Problem melden auf Github">
-<!ENTITY Ctr_newversion		"Neuste CTR Version">
-<!ENTITY Ctr_newversion2	"Neuste CTR Beta Version">
+<!ENTITY Ctr_newversion		"Neuste Version">
+<!ENTITY Ctr_newversion2	"Neuste Betaversion">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Erste Schritte">
